[gd_scene load_steps=7 format=3 uid="uid://b3fek1gdhc7aw"]

[ext_resource type="Texture2D" uid="uid://bfchbl8thvulv" path="res://Art/Inventory/pixil-frame-0 (9).png" id="1_kmt40"]
[ext_resource type="Script" path="res://Dialogue/Merchant_Dialogue/merchant_dialogue.gd" id="1_svyaw"]
[ext_resource type="FontFile" uid="uid://bb6ixiqy2802s" path="res://Celtica-BookOblique.ttf" id="3_045jx"]
[ext_resource type="Texture2D" uid="uid://o0ffakvw437d" path="res://Art/Inventory/pixil-frame-0 (8).png" id="3_mvy4q"]
[ext_resource type="Texture2D" uid="uid://co360g35roj8o" path="res://Art/Portraits for convo and animation/Portraits for convo and animation/Merchant/Merchant Portrait.png" id="4_xysps"]

[sub_resource type="ButtonGroup" id="ButtonGroup_i8j3n"]
allow_unpress = true

[node name="Merchant_Dialogue" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -1.0
offset_right = 39.0
offset_bottom = 40.0
script = ExtResource("1_svyaw")
M_D_file = "res://Dialogue/Merchant_Dialogue/merchant_dialogue1.json"

[node name="NinePatchRect" type="NinePatchRect" parent="."]
process_mode = 3
physics_interpolation_mode = 1
auto_translate_mode = 1
texture_filter = 1
layout_mode = 0
offset_left = 1.0
offset_right = 109.0
offset_bottom = 40.0
scale = Vector2(1.11567, 1.30714)
mouse_filter = 0
texture = ExtResource("1_kmt40")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
metadata/_edit_group_ = true

[node name="Text" type="RichTextLabel" parent="NinePatchRect"]
process_mode = 3
physics_interpolation_mode = 1
texture_filter = 1
clip_contents = false
layout_mode = 0
offset_left = 1.79264
offset_top = 11.4754
offset_right = 1339.79
offset_bottom = 149.475
scale = Vector2(0.05, 0.05)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/normal_font = ExtResource("3_045jx")
theme_override_font_sizes/normal_font_size = 100
text = "chatting...."
fit_content = true
scroll_following = true
autowrap_mode = 2
tab_size = 1

[node name="Name" type="RichTextLabel" parent="NinePatchRect"]
process_mode = 3
physics_interpolation_mode = 1
texture_filter = 1
clip_contents = false
layout_mode = 0
offset_left = 3.0
offset_top = 2.0
offset_right = 702.0
offset_bottom = 207.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/normal_font = ExtResource("3_045jx")
theme_override_font_sizes/normal_font_size = 150
text = "name:"
fit_content = true
scroll_following = true
autowrap_mode = 2
tab_size = 1

[node name="TextureButton" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 3.58529
offset_top = 29.8361
offset_right = 113.585
offset_bottom = 79.8361
scale = Vector2(0.551879, 0.146138)
toggle_mode = true
action_mode = 0
button_group = SubResource("ButtonGroup_i8j3n")
texture_normal = ExtResource("3_mvy4q")
texture_pressed = ExtResource("1_kmt40")
texture_disabled = ExtResource("3_mvy4q")
stretch_mode = 0

[node name="Follow Text" type="Label" parent="NinePatchRect/TextureButton"]
layout_mode = 0
offset_left = 11.3689
offset_top = 15.7051
offset_right = 1752.37
offset_bottom = 425.705
scale = Vector2(0.05, 0.05)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 18
theme_override_constants/shadow_offset_y = 25
theme_override_fonts/font = ExtResource("3_045jx")
theme_override_font_sizes/font_size = 335
text = "Follow me 
"

[node name="unFollow Text" type="Label" parent="NinePatchRect/TextureButton"]
layout_mode = 0
offset_left = 6.49654
offset_top = 14.2102
offset_right = 106.497
offset_bottom = 37.2102
scale = Vector2(0.05, 0.05)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 18
theme_override_constants/shadow_offset_y = 25
theme_override_fonts/font = ExtResource("3_045jx")
theme_override_font_sizes/font_size = 335
text = "unFollow me 
"

[node name="Sprite2D" type="Sprite2D" parent="NinePatchRect"]
z_index = 1
position = Vector2(86.9433, 18.3607)
scale = Vector2(0.03, 0.03)
texture = ExtResource("4_xysps")

[node name="Sprite2D2" type="Sprite2D" parent="NinePatchRect"]
modulate = Color(0.499446, 0.488466, 0.035647, 1)
position = Vector2(86.9433, 19.8908)
scale = Vector2(0.615656, 0.491752)
texture = ExtResource("1_kmt40")

[connection signal="pressed" from="NinePatchRect/TextureButton" to="." method="_on_texture_button_pressed"]
